[metadata]
name = Markups
version = attr: markups.__version__
description = A wrapper around various text markups
long_description = file: README.rst
author = Dmitry Shachnev
author_email = mitya57@gmail.com
url = https://github.com/retext-project/pymarkups
license = BSD 3-Clause License
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Topic :: Text Processing :: Markup
    Topic :: Text Processing :: General
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = markups
python_requires = >=3.6
install_requires =
    python-markdown-math
    importlib-metadata;python_version<'3.8'

[options.extras_require]
markdown = Markdown>=2.6; PyYAML
restructuredtext = docutils
textile = textile
highlighting = Pygments

[options.entry_points]
pymarkups =
    markdown = markups.markdown:MarkdownMarkup
    restructuredtext = markups.restructuredtext:ReStructuredTextMarkup
    textile = markups.textile:TextileMarkup

[bdist_wheel]
universal = 1
