[metadata]
name = Markups
version = attr: markups.__version__
description = A wrapper around various text markups
long_description = file: README.rst
author = Dmitry Shachnev
author_email = mitya57@gmail.com
url = https://github.com/retext-project/pymarkups
license = BSD 3-Clause License
project_urls =
    Documentation = https://pymarkups.readthedocs.io/en/latest/
    Issue Tracker = https://github.com/retext-project/pymarkups/issues/
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Topic :: Text Processing :: Markup
    Topic :: Text Processing :: General
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = markups
python_requires = >=3.8
install_requires = python-markdown-math

[options.extras_require]
markdown = Markdown>=2.6; PyYAML
restructuredtext = docutils
textile = textile
highlighting = Pygments
asciidoc = asciidoc; lxml

[options.entry_points]
pymarkups =
    markdown = markups.markdown:MarkdownMarkup
    restructuredtext = markups.restructuredtext:ReStructuredTextMarkup
    textile = markups.textile:TextileMarkup
    asciidoc = markups.asciidoc:AsciiDocMarkup
